--- a/.github/workflows/publish-prod.yml
+++ b/.github/workflows/publish-prod.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: {{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: {{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: {{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
       - name: Setup node
         uses: actions/setup-node@v1
         with:
@@ -31,4 +31,4 @@ jobs:
       - name: Build static site
         run: bundle exec middleman build
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./build/ s3://{{ secrets.BUCKET_NAME }} --delete
+        run: aws s3 sync ./build/ s3://${{ secrets.BUCKET_NAME }} --delete
