--- a/.github/workflows/publish-prod.yml
+++ b/.github/workflows/publish-prod.yml
@@ -16,10 +16,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
-      - name: Setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '13.x'
+      #- name: Setup node
+      #  uses: actions/setup-node@v1
+      #  with:
+      #    node-version: '13.x'
       - name: Install node dependencies
         run: npm ci
       - name: Setup ruby
