--- a/.github/workflows/publish-prod.yml
+++ b/.github/workflows/publish-prod.yml
@@ -20,8 +20,8 @@ jobs:
       #  uses: actions/setup-node@v1
       #  with:
       #    node-version: '13.x'
-      - name: Install node dependencies
-        run: npm ci
+      #- name: Install node dependencies
+      #  run: npm ci
       - name: Setup ruby
         uses: ruby/setup-ruby@v1
         with:
