--- a/.github/workflows/publish-pre.yml
+++ b/.github/workflows/publish-pre.yml
@@ -1,8 +1,8 @@
-name: publish-prod
+name: publish-pre
 on:
   push:
     branches:
-      - main
+      - pre
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,4 +31,4 @@ jobs:
       - name: Build static site
         run: bundle exec middleman build
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./build/ s3:// www.macapinlac.com --delete
+        run: aws s3 sync ./build/ s3://preview.macapinlac.com --delete
