Add About Page and Social Media Links
Implemented the About page with a complete template, including personal introduction, professional background, and social media connections. Updated navigation to include the About page link. Enhanced configuration for pretty URLs and added social media data in YAML format for better integration. Updated documentation to reflect the new feature and its implementation details.

--- a/data/socials.yml
+++ b/data/socials.yml
@@ -6,3 +6,23 @@ sites:
     url: https://www.linkedin.com/in/rsmacapinlac
   - name: GitHub
     url: https://github.com/rsmacapinlac
+
+github:
+  url: "https://github.com/rsmacapinlac"
+  icon: "🐙"
+  display_name: "GitHub"
+
+linkedin:
+  url: "https://www.linkedin.com/in/rsmacapinlac"
+  icon: "💼"
+  display_name: "LinkedIn"
+
+instagram:
+  url: "https://www.instagram.com/rsmacapinlac"
+  icon: "📸"
+  display_name: "Instagram"
+
+twitter:
+  url: "https://twitter.com/ritchie"
+  icon: "🐦"
+  display_name: "Twitter"
