Implement about page tag functionality and enhance content structure
Added methods to retrieve and display curated tags with metadata on the About page, improving content relevance. Updated the About page layout for better engagement, including a refined introduction and enhanced sidebar. Improved SEO metadata across various pages, ensuring consistent branding with updated titles. Enhanced CSS for better typography and visual hierarchy, particularly for tag descriptions and content areas.

--- a/data/homepage_hero.yml
+++ b/data/homepage_hero.yml
@@ -1,6 +1,6 @@
 title: "Hi, I'm Ritchie"
 tagline: ""
-description: "Welcome to my own personal online space. It's an old space (since 2001) so things are a bit rickety. Try not to break anything but if you do find something that's broken, let me know. Make yourself at home."
+description: "Welcome to my digital home since 2000. I'm a technology professional, parent, and serial rebuilder of perfectly functional things based in Vancouver, Canada. If something's broken here, I probably \"improved\" it last weekend. Take a look around and see what catches your interest."
 primary_button:
   text: "Read My Posts"
   url: "/writing"
