Update tags and post associations for improved content organization
Refactored the tags in `tags.yml`, introducing new categories such as "Building Things," "Figuring Things Out," and "Family Adventures," while removing outdated ones. Updated associated blog posts to reflect these changes, ensuring better alignment with current themes and enhancing content discoverability. Adjusted tags in multiple posts to improve relevance and user engagement.

--- a/data/tags.yml
+++ b/data/tags.yml
@@ -1,46 +1,42 @@
 ---
 tags:
-  - name: "Technology"
-    description: "Practical guides, experiments, and reflections on software development, DevOps, and emerging technologies. From Docker tutorials to EV road trip planning, I share hands-on experiences."
+  - name: "Building Things"
+    description: "Hands-on experiments with software, hardware, and creating things. From Arduino projects to website rebuilds, I share the messy process of making technology work."
     icon: "💻"
     color: "#2a5d8f"
-  - name: "Parenting"
-    description: "Honest reflections on the challenges and joys of parenting. I believe in sharing both the successes and struggles, always with the goal of learning and growing together."
-    icon: "👨‍👩‍👧‍👦"
-    color: "#e0a96d"
-  - name: "Productivity"
-    description: "Experiments with time management, knowledge systems, and workflow optimization. I test various approaches and share what actually works in real-world scenarios."
-    icon: "⚡"
-    color: "#e4572e"
-  - name: "Personal Development"
-    description: "Thoughts on learning, growth, and the intersection of work and life. I believe in continuous improvement and authentic self-reflection."
+  - name: "Figuring Things Out"
+    description: "Honest reflections on personal development, life lessons, and the process of learning. I believe in sharing both successes and setbacks as part of the growth journey."
     icon: "🌱"
     color: "#4a90e2"
-  - name: "Adventures in AI"
-    description: "Exploring the intersection of artificial intelligence and daily life. From practical applications to philosophical musings on our AI-powered future."
+  - name: "Making Things Work"
+    description: "Systematic approaches to productivity, time management, and optimizing workflows. I test various methods and share what actually works in real life."
+    icon: "⚡"
+    color: "#e4572e"
+  - name: "Family Adventures"
+    description: "Real family experiences and the everyday adventures of parenting. I share the honest moments, both the wins and the awkward interactions that make up family life."
+    icon: "👨‍👩‍👧‍👦"
+    color: "#e0a96d"
+  - name: "Playing with AI"
+    description: "Exploring artificial intelligence through practical experimentation. From using AI to pick tablets to trusting it with Linux setups, I share hands-on experiences."
     icon: "🤖"
     color: "#9b59b6"
-  - name: "Road Trip"
-    description: "Travel experiences and adventures, particularly focused on electric vehicle road trips and sustainable travel practices."
+  - name: "Travelling"
+    description: "Travel experiences and adventures, particularly focused on sustainable transportation and electric vehicle road trips."
     icon: "🚗"
     color: "#27ae60"
-  - name: "Tesla"
-    description: "Experiences with electric vehicles, particularly Tesla ownership, charging infrastructure, and the transition to sustainable transportation."
-    icon: "⚡"
-    color: "#e74c3c"
-  - name: "Series"
-    description: "Multi-part explorations of topics that require deeper investigation. These are longer-form content series that build upon each other."
-    icon: "📚"
-    color: "#f39c12"
-  - name: "Seth Godin"
-    description: "Responses and reflections inspired by Seth Godin's work on marketing, leadership, and making a difference."
-    icon: "📖"
-    color: "#34495e"
-  - name: "Newsletter"
-    description: "Content originally shared through newsletters and email communications, focusing on timely insights and personal updates."
+  - name: "Conversations"
+    description: "Direct responses and reflections on other people's work, ideas, or questions. These are thoughtful conversations that engage with external content."
+    icon: "💬"
+    color: "#1abc9c"
+  - name: "Random Thoughts"
+    description: "Quick thoughts, obsessions, and updates originally shared through newsletters and personal communications."
     icon: "📧"
     color: "#3498db"
-  - name: "Reply"
-    description: "Direct responses to other people's work, ideas, or questions. These are conversational pieces that engage with external content."
-    icon: "💬"
-    color: "#1abc9c" 
+  - name: "Homelab Experiments"
+    description: "Experiments and adventures in home server management, self-hosted services, and infrastructure automation."
+    icon: "🖥️"
+    color: "#8e44ad"
+  - name: "Tech Life"
+    description: "Experiences with technology ecosystems, devices, and integrating tech into daily life. From Apple products to smart home setups."
+    icon: "📱"
+    color: "#34495e" 
