--- a/data/series.yml
+++ b/data/series.yml
@@ -1,14 +1,15 @@
 ---
 series:
   - name: "Tesla Road Trip Adventure"
-    description: "Our journey from Vancouver to Edmonton and back in our new Tesla Model Y, exploring the challenges and joys of long-distance EV travel."
+    description: "We bought a Tesla! We got free FSD for a month. So what do we do? Drive 19 hours to Edmonton... Fully Autonomous."
     icon: "🚗"
     color: "#e74c3c"
     slug: "tesla-road-trip-adventure"
+    featured: false
     posts:
       - title: "Planning a Road Trip from Vancouver to Edmonton in a Tesla Model Y"
         date: "2024-07-17"
         summary: "Planning our first long-distance EV road trip from Vancouver to Edmonton using A Better Route Planner (ABRP) to ensure we don't end up stranded in the mountains."
-      - title: "The Actual Tesla Road Trip: Vancouver to Edmonton"
-        date: "2024-07-18"
-        summary: "The actual journey from Vancouver to Edmonton in our Tesla Model Y, including charging stops, range anxiety, and lessons learned from our first long-distance EV road trip." 
+      #- title: "The Actual Tesla Road Trip: Vancouver to Edmonton"
+      #  date: "2024-07-18"
+      #  summary: "The actual journey from Vancouver to Edmonton in our Tesla Model Y, including charging stops, range anxiety, and lessons learned from our first long-distance EV road trip."
