--- a/.github/workflows/publish-prod.yml
+++ b/.github/workflows/publish-prod.yml
@@ -39,6 +39,6 @@ jobs:
         run: aws s3 sync ./build/ s3://${{ secrets.BUCKET_NAME }} --delete
       - name: Verify deployment
         run: aws s3 ls s3://${{ secrets.BUCKET_NAME }} --recursive | head -20
-      - name: Invalidate CloudFront cache
-        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+      #- name: Invalidate CloudFront cache
+      #  if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+      #  run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
