New blog post and CLAUDE.md

--- a/data/series.yml
+++ b/data/series.yml
@@ -10,6 +10,9 @@ series:
       - title: "How I Procrastinated my way into my website redesign"
         date: "2025-06-30"
         summary: "The story of how strategic procrastination led to the most valuable part of my website redesign process - and why you should probably do the same."
+      - title: "AI and the Art of Overcomplicating Simple Things"
+        date: "2025-08-01"
+        summary: "What happens when you try to AI everything? A reality check on wireframing tools and the value of questioning traditional process steps."
       #- title: "Failed Experiments: When AI Wireframing Goes Wrong"
       #  date: "2025-07-07"
       #  summary: "Reality check: what happens when you try to jump straight to wireframes with AI? Spoiler: it doesn't work as advertised."
